--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
+<body class="bg-light">
+    <div class="container">
+        <section class="input row">
+            <div class="col-12">
+                <h3 class="text-center mt-3">Add an animal!</h3>
+            </div>
+            <div class="col-12">
+                <form id="input-nm" class="input-group w-50 mx-auto">
+                    <input type="text" class="form-control" id="name-input" placeholder="Name">
+                    <div class="input-group-append">
+                        <button class="btn btn-info font-weight-bold" id="name-btn" type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </section>
+        <hr>
+        <section class="buttons row">
+        </section>
+        <hr>
+        <section class="gifs row">
+        </section>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.4.0/firebase.js"></script>
