--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <h3 class="text-center mt-3">Add an animal!</h3>
             </div>
             <div class="col-12">
-                <form id="input-nm" class="input-group w-50 mx-auto">
-                    <input type="text" class="form-control" id="name-input" placeholder="Name">
+                <form id="input-nm" class="input-group w-75 mx-auto">
+                    <input type="text" class="form-control" id="name-input" placeholder="Animal name">
                     <div class="input-group-append">
                         <button class="btn btn-info font-weight-bold" id="name-btn" type="submit">Submit</button>
                     </div>
