[+] api connection, displaying gifs

--- a/index.html
+++ b/index.html
@@ -27,10 +27,12 @@
             </div>
         </section>
         <hr>
-        <section class="buttons row">
+        <section class="row">
+            <div class="col-12 buttons text-center"></div>
         </section>
         <hr>
-        <section class="gifs row">
+        <section class="row">
+            <div class="col-12 gifs mx-auto"></div>
         </section>
     </div>
 
