--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
         </section>
         <hr>
         <section class="row">
-            <div class="col-12 gifs mx-auto"></div>
+            <div class="col-12 gifs mx-auto text-center"><h2 class="text-info">Press any button to see Gifs!</h2></div>
         </section>
+        <hr><br>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
